# readabs

./: .gitignore  312dev.yaml  CHANGELOG.md  README.md  TODO.md  VERSION.txt  build-test.sh  build_conda_recipe.sh  build_docs.sh  build_install.sh  build_test.sh  conda_build_install.sh  generate_catalogue_map.py  pypi_build_install.sh  pyproject.toml  setup.py
docs/: abs_catalogue.html  read_abs_cat.html  read_abs_series.html  readabs.html  search.js
docs/readabs/: abs_catalogue.html  abs_catalogue_map.html  abs_meta_data_support.html  download_cache.html  get_abs_links.html  get_rba_links.html  grab_abs_url.html  index.html  print_abs_catalogue.html  rba_catalogue.html  read_abs_by_desc.html  read_abs_cat.html  read_abs_series.html  read_rba_table.html  read_support.html  recalibrate.html  search_abs_meta.html  splice.html  utilities.html
old-docs/: index.html  print_abs_catalogue.html
src/: __init__.py  abs_catalogue_map.py  abs_meta_data_support.py  catalogue_map.py  data_capture.py  download_cache.py  generate_catalogue_map.py  get_data_links.py  get_url_cache.py  read_abs_cat.py  read_abs_series.py  read_support.py  readabs.py
src/readabs/: __init__.py  abs_catalogue.py  abs_meta_data_support.py  (+17 more)
test/: test.py  test_offline_fallback.py
tests/: run_tests.sh  test_get_data_links.py  test_get_data_links_1.py  test_get_data_links_2.py  test_import_readabs.py  test_print_abs_catalogue.py  test_read_abs_cat.py  test_read_abs_cat_1.py  test_read_abs_cat_2.py  test_read_abs_cat_3.py  test_read_abs_series.py  test_read_abs_series_1.py  test_read_abs_series_2.py
(+4 files in other folders)
